# prefect-on-snowflake

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CONSTITUTION.md  Makefile  README.md  SPECIFICATION.md  docker-compose.auth-proxy.yaml  docker-compose.monitoring-local.yml  docker-compose.yaml  pools.yaml  prefect.yaml  pyproject.toml
.github/: ci-config.toml
dashboard/: app.py  deploy.sh  pyproject.toml  snowflake.yml
flows/: __init__.py  alert_test_flow.py  data_quality_flow.py  deploy.py  e2e_test_flow.py  example_flow.py  external_api_flow.py  health_check_flow.py  hooks.py  pat_rotation_flow.py  shared_utils.py  snowflake_flow.py  stage_cleanup_flow.py
images/prefect/: .dockerignore  Dockerfile  otel_entrypoint.py  otel_sitecustomize.py  pyproject.toml
monitoring/: deploy_monitoring.sh  docker-compose.monitoring.yml  teardown_monitoring.sh
scripts/: _lib.sh  build_and_push.sh  cost_analysis.sh  demo.sh  deploy.sh  deploy_flows.sh  load_test.sh  rotate_secrets.sh  setup-o4s.sh  setup_automations.py  sync_flows.sh  teardown.sh  update_versions.sh
specs/: pf_deploy_job.yaml  pf_migrate.yaml  pf_postgres.yaml  pf_redis.yaml  pf_server.yaml  pf_services.yaml  pf_trigger_job.yaml  pf_worker.yaml
sql/: 01_setup_database.sql  02_setup_stages.sql  03_setup_secrets.sql.template  04_setup_networking.sql  05_setup_compute_pools.sql  06_setup_image_repo.sql  07_create_services.sql  07_create_services_gcp.sql  07b_update_services.sql  08_validate.sql  08b_setup_o4s.sql  09_suspend_all.sql  10_resume_all.sql  11_setup_watchdog.sql
tests/: conftest.py  test_compose_config.py  test_cross_file_consistency.py  test_dashboard.py  test_deploy_units.py  test_docker_builds.py  test_e2e_hybrid.py  test_e2e_secret_blocks.py  test_e2e_spcs.py  test_env_config.py  test_external_api_behavior.py  test_flow_syntax.py  test_gitlab_ci.py  test_hooks.py  test_infrastructure_consistency.py  test_local_compose.py  test_monitoring.py  test_nginx_conf.py  test_pat_rotation.py  (+9 more)
(+105 files in other folders)
