[project]
name = "prefect-spcs-worker"
version = "1.0.0"
description = "Prefect worker image with Snowflake + flow dependencies"
requires-python = ">=3.12"

dependencies = [
    "prefect>=3.0,<4",
    "prefect-redis>=0.2.0,<1",
    "snowflake-connector-python>=3.6,<4",
    "requests>=2.31,<3",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
